<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Personal Library Catalogue Twitter</string>
    <string name="add_new_book">Add new book</string>
    <string name="no_book">There are no books in library</string>
    <string name="title_activity_add_book">Add Book</string>
    <string name="author">Author</string>
    <string name="author_label">Author:</string>
    <string name="title">Title</string>
    <string name="title_label">Title:</string>
    <string name="cover">Cover</string>
    <string name="select_cover">Select book cover</string>
    <string name="description">Description</string>
    <string name="description_label">Description:</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="item_menu_title">Menu</string>
    <string name="delete">Delete book</string>
    <string name="edit">Edit book</string>
    <string name="share">Share in Twitter</string>
    <string name="delete_question">Delete this book from library?</string>
    <string name="title_activity_view_book">View Book Activity</string>
    <string name="error_message">All fields must be filled!</string>
    <string name="title_activity_twitter">TwitterActivity</string>
    <string name="action_settings">Settings</string>
    <string name="twit">Twit it!</string>
    <string name="athorization">Need authorization</string>
    <string name="wait">Please, wait!</string>
    <string name="characters_label">Characters:</string>
    <string name="characters_sample">140</string>
    <string name="twit_begin">I have book</string>
    <string name="twit_end">and want to let world know about it!</string>
    <string name="twit_error">Sorry, an error occurred while sending :(</string>
    <string name="error_code">Error code:</string>
    <string name="twit_ok">Successful posting in twitter!</string>
    <string name="sending">Sending data&#8230;</string>

</resources>
