<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ViewBookActivity" >

    <ImageView
        android:id="@+id/cover_view"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/book" />

    <TextView
        android:id="@+id/title_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/cover_view"
        android:layout_below="@+id/cover_view"
        android:text="@string/title_label"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/author_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/title_label"
        android:layout_below="@+id/title_label"
        android:text="@string/author_label"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/title_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cover_view"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@+id/title_label"
        android:text="@string/title"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/author_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/author_label"
        android:layout_alignBottom="@+id/author_label"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@+id/author_label"
        android:text="@string/author"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/description_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/author_label"
        android:layout_below="@+id/author_label"
        android:text="@string/description_label"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/description_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/description_label"
        android:layout_alignBottom="@+id/description_label"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@+id/description_label"
        android:text="@string/description"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>