<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".TwitterActivity" >

    <EditText
        android:id="@+id/twit_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:maxLength="140"
        android:maxLines="8" >
    </EditText>

    <Button
        android:id="@+id/twit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/twit_message"
        android:layout_below="@+id/twit_message"
        android:text="@string/twit"
        android:onClick="onTwitClicked" />

    <TextView
        android:id="@+id/characters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/characters_label"
        android:layout_alignBottom="@+id/characters_label"
        android:layout_alignRight="@+id/twit_message"
        android:text="@string/characters_sample"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/characters_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/twit_button"
        android:layout_toLeftOf="@+id/characters"
        android:text="@string/characters_label"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>
